Fixed footer social icon spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,29 +202,9 @@ footer {
   height: 50px;
 }
 
-.footer-middle-nav>.nav-pills {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: inherit;
-}
-
-.footer-middle-nav>.nav-pills>li.active>a,
-.footer-middle-nav>.nav-pills>li.active>a:focus {
-  background-color: transparent;
-  color: #696969;
-  font-size: 16px;
-}
-
-.footer-middle-nav>.nav-pills>li>a:hover,
-.footer-middle-nav>.nav-pills>li.active>a:hover{
-  background-color: transparent;
-  color: #FF0000; //red-text
-}
-
 .flex-social {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -262,7 +242,7 @@ footer {
 /* footer styles end */
 
 /* media queries start */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   [class*="col-"] {
     width: 100%;
   }
